--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -215,12 +215,92 @@
 
 @Misc{cmt,
   OPTkey = 	 {},
-  author =	 {Mario Blazevic},
-  title =	 {The monad-coroutine package. Coroutine monad transformer for suspending and resuming monadic computations},
+  author =	 {Mario Bla\v{z}evi\'{c}},
+  title =	 {The \textsf{monad-coroutine} package},
   howpublished = {Hackage},
   OPTmonth = 	 {},
   year =	 {2012},
   note =	 {\url{http://hackage.haskell.org/package/monad-coroutine}. Retrieved 23.5.2012},
+  OPTannote = 	 {Coroutine monad transformer for suspending and resuming monadic computations}
+}
+
+@incollection {springerlink:10.1007/978-3-642-29822-6_15,
+   author = {Kiselyov, Oleg},
+   title = {Iteratees},
+   booktitle = {Functional and Logic Programming},
+   longseries = {Lecture Notes in Computer Science},
+   series = {LNCS 7294},
+   editor = {Schrijvers, Tom and Thiemann, Peter},
+   fullpublisher = {Springer Berlin / Heidelberg},
+   publisher = {Springer-Verlag},
+   isbn = {978-3-642-29821-9},
+   keyword = {Computer Science},
+   pages = {166--181},
+   fullvolume = {7294},
+   OPTurl = {http://dx.doi.org/10.1007/978-3-642-29822-6_15},
+   doi = {10.1007/978-3-642-29822-6_15},
+   year = {2012}
+}
+
+@article{Hinze:2000:DBM:357766.351258,
+ author = {Hinze, Ralf},
+ title = {Deriving backtracking monad transformers},
+ journal = {SIGPLAN Notices},
+ issue_date = {Sept. 2000},
+ volume = {35},
+ number = {9},
+ month = sep,
+ year = {2000},
+ issn = {0362-1340},
+ pages = {186--197},
+ numpages = {12},
+ OPTurl = {http://doi.acm.org/10.1145/357766.351258},
+ doi = {10.1145/357766.351258},
+ acmid = {351258},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {Haskell, Prolog, backtracking, continuations, cut, monad transformers, monads, program derivation},
+} 
+
+@article{lato2010iteratee,
+  title={Iteratee: Teaching an Old Fold New Tricks},
+  author={Lato, J. W.},
+  journal={The Monad.Reader},
+  issue = {16},
+  pages={19--35},
+  year={2010}
+}
+
+
+@Misc{oleg-iteratee-talk,
+  OPTkey = 	 {},
+  author =	 {Oleg Kiselyov},
+  title =	 {Iteratee {IO}: safe, practical, declarative input processing},
+  OPThowpublished = {},
+  OPTmonth = 	 {},
+  year =	 {2009},
+  note =	 {\url{http://okmij.org/ftp/Haskell/Iteratee/IterateeIO-talk.pdf}, retrieved 23.5.2012},
+  OPTannote = 	 {}
+}
+
+@InProceedings{oleg-iteratee,
+  author = 	 {Kiselyov, Oleg},
+  title = 	 {Incremental multi-level input processing with left-
+fold enumerator: predictable, high-performance, safe, and elegant},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle =	 {{ACM} {SIGPLAN} Developer Tracks on Functional Programming},
+  OPTpages = 	 {},
+  year =	 {2008},
+  OPTeditor = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  series =	 {DEFUN '08},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  OPTorganization = {},
+  OPTpublisher = {},
+  OPTnote = 	 {},
   OPTannote = 	 {}
 }
 
