--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -239,7 +239,8 @@
    fullvolume = {7294},
    OPTurl = {http://dx.doi.org/10.1007/978-3-642-29822-6_15},
    doi = {10.1007/978-3-642-29822-6_15},
-   year = {2012}
+   year = {2012},
+   note = {See \url{http://okmij.org/ftp/Haskell/Iteratee/describe.pdf} for an extended version.}
 }
 
 @article{Hinze:2000:DBM:357766.351258,
@@ -285,8 +286,7 @@
 
 @InProceedings{oleg-iteratee,
   author = 	 {Kiselyov, Oleg},
-  title = 	 {Incremental multi-level input processing with left-
-fold enumerator: predictable, high-performance, safe, and elegant},
+  title = 	 {Incremental multi-level input processing with left-fold enumerator: predictable, high-performance, safe, and elegant},
   OPTcrossref =  {},
   OPTkey = 	 {},
   booktitle =	 {{ACM} {SIGPLAN} Developer Tracks on Functional Programming},
@@ -304,3 +304,20 @@ fold enumerator: predictable, high-performance, safe, and elegant},
   OPTannote = 	 {}
 }
 
+@inproceedings{Kiselyov:2004:STH:1017472.1017488,
+ author = {Kiselyov, Oleg and L\"{a}mmel, Ralf and Schupke, Keean},
+ title = {Strongly typed heterogeneous collections},
+ booktitle = {Proceedings of the 2004 {ACM} {SIGPLAN} Workshop on {Haskell}},
+ series = {Haskell '04},
+ year = {2004},
+ isbn = {1-58113-850-4},
+ OPTlocation = {Snowbird, Utah, USA},
+ pages = {96--107},
+ numpages = {12},
+ OPTurl = {http://doi.acm.org/10.1145/1017472.1017488},
+ doi = {10.1145/1017472.1017488},
+ acmid = {1017488},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {collections, dependently typed programming, extensible records, haskell, type equality, type improvement, type-indexed rows, type-safe database access},
+} 
