Add WATERS2012 conference, and provide correct hackage package name

--- a/content.tex
+++ b/content.tex
@@ -20,8 +20,8 @@ One of the key concepts of S(o)OS is that only those OS modules needed by a appl
 This execution environment thus differs from contemporary operating systems where every core runs a complete copy of the (monolithic) operating system.
 
 While creating new operating system concepts and regarding their interaction with the programmability of large-scale systems, we found that existing simulation packages do not seem to have the right abstractions for fast design exploration \cite{cotson,omnet}.
-The ability to simulate separate components of the OS and of the application was the main goal to develop the OS simulator \soosim \olcomment{cite the WATERS paper if it is accepted until submission}.
-\soosim is also available from Hackage.\footnote{Issue \cd{cabal install soosim} to install \soosim. See also:
+The ability to simulate separate components of the OS and of the application was the main goal to develop the OS simulator \soosim \cite{Baaij:2012}.
+\soosim is also available from Hackage.\footnote{Issue \cd{cabal install SoOSiM} to install \soosim. See also:
 \url{http://github.com/christiaanb/SoOSiM}.}
 The design decisions were:
 \begin{itemize}
