--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -320,4 +320,13 @@
  publisher = {ACM},
  OPTaddress = {New York, NY, USA},
  keywords = {collections, dependently typed programming, extensible records, haskell, type equality, type improvement, type-indexed rows, type-safe database access},
-} 
+}
+
+@inproceedings{Baaij:2012,
+  author = {Baaij, Christiaan and Kuper, Jan and Schubert, Lutz},
+  title = {{SoOSiM: Operating System and Programming Language Exploration}},
+  booktitle = {{3rd International Workshop on Analysis Tools and Methodologies for Embedded and Real-time Systems}},
+  day = {10},
+  month = {July},
+  year = {2012},
+}
