--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -324,9 +324,10 @@
 
 @inproceedings{Baaij:2012,
   author = {Baaij, Christiaan and Kuper, Jan and Schubert, Lutz},
-  title = {{SoOSiM: Operating System and Programming Language Exploration}},
-  booktitle = {{3rd International Workshop on Analysis Tools and Methodologies for Embedded and Real-time Systems}},
+  title = {{SoOSiM}: Operating System and Programming Language Exploration},
+  booktitle = {3\xrd International Workshop on Analysis Tools and Methodologies for Embedded and Real-time Systems},
   day = {10},
   month = {July},
   year = {2012},
+  series = {WATERS '12},
 }
