another paper we might want to cite

--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -331,3 +331,22 @@
   year = {2012},
   series = {WATERS '12},
 }
+
+@inproceedings{Pike:2009:RYO:1596638.1596646,
+ author = {Pike, Lee and Brown, Geoffrey and Goodloe, Alwyn},
+ title = {Roll your own test bed for embedded real-time protocols: a {Haskell} experience},
+ booktitle = {Proceedings of the 2\nd ACM SIGPLAN symposium on Haskell},
+ series = {Haskell '09},
+ year = {2009},
+ isbn = {978-1-60558-508-6},
+ OPTlocation = {Edinburgh, Scotland},
+ pages = {61--68},
+ numpages = {8},
+ OPTurl = {http://doi.acm.org/10.1145/1596638.1596646},
+ doi = {10.1145/1596638.1596646},
+ acmid = {1596646},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {emulation, functional programming, physical-layer protocol testing},
+} 
+
