minor biblio tweaks

--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -266,8 +266,8 @@
 @article{lato2010iteratee,
   title={Iteratee: Teaching an Old Fold New Tricks},
   author={Lato, J. W.},
-  journal={The Monad.Reader},
-  issue = {16},
+  journal={The Mon\-ad.\hspace{0pt}Read\-er},
+  number = {16},
   pages={19--35},
   year={2010}
 }
