--- a/soosim.tex
+++ b/soosim.tex
@@ -332,38 +332,19 @@ breaklines=true,basicstyle=\sffamily];#1;}
 \maketitle
 
 \begin{abstract}
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-  aliquip ex ea commodo consequat. Duis aute irure dolor in
-  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-  culpa qui officia deserunt mollit anim id est laborum.
-
-
-  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-  accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-  quae ab illo inventore veritatis et quasi architecto beatae vitae
-  dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-  aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-  eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-  qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-  sed quia non numquam eius modi tempora incidunt ut labore et dolore
-  magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-  nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-  aliquid ex ea commodi consequatur? Quis autem vel eum iure
-  reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-  consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla
-  pariatur?
+This paper presents our experience from implementing \soosim --- an operating system simulator, written in Haskell. 
+We briefly discuss the goals and purposed usage of our simulator. 
+We show the reasons to choose Haskell and examine in detail the language features, extensions, programming patterns and techniques, used to implement \soosim. 
+These include coroutines, type classes, monads, techniques for embedded domain-specific languages, and dynamic types. 
+We explore the reasons for using both natural Haskell's static typing with ad-hoc polymorphism and dynamic types in our project.
 \end{abstract}
 
-\category{CR-number}{subcategory}{third-level}
+\category{D.3.3}{Programming Languages}{Language Constructs and Features}
 
-\terms
-term1, term2
+\terms{Design, Languages}
 
 \keywords
-keyword1, keyword2
+simulation, type classes, ad-hoc polymorphism, finally tagless embedding, dynamic typing
 
 \input{content}
 
