--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -350,3 +350,102 @@
  keywords = {emulation, functional programming, physical-layer protocol testing},
 } 
 
+@article{Klein:2009:ERS:1631687.1596566,
+ author = {Klein, Gerwin and Derrin, Philip and Elphinstone, Kevin},
+ title = {Experience report: seL4: formally verifying a high-performance microkernel},
+ journal = {SIGPLAN Notices},
+ issue_date = {September 2009},
+ volume = {44},
+ number = {9},
+ month = aug,
+ year = {2009},
+ issn = {0362-1340},
+ pages = {91--96},
+ numpages = {6},
+ OPTurl = {http://doi.acm.org/10.1145/1631687.1596566},
+ doi = {10.1145/1631687.1596566},
+ acmid = {1596566},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {Isabelle/HOL, haskell, microkernel, seL4},
+} 
+
+@article{Sampson:2009:ERH:1631687.1596578,
+ author = {Sampson, Curt J.},
+ title = {Experience report: {Haskell} in the 'real world': writing a commercial application in a lazy functional lanuage},
+ journal = {SIGPLAN Notices},
+ issue_date = {September 2009},
+ volume = {44},
+ number = {9},
+ month = aug,
+ year = {2009},
+ issn = {0362-1340},
+ pages = {185--190},
+ numpages = {6},
+ OPTurl = {http://doi.acm.org/10.1145/1631687.1596578},
+ doi = {10.1145/1631687.1596578},
+ acmid = {1596578},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {commercial programming, financial systems, functional programming, haskell},
+} 
+
+@article{Beshers:2007:ERU:1291220.1291184,
+ author = {Beshers, Clifford and Fox, David and Shaw, Jeremy},
+ title = {Experience report: using functional programming to manage a linux distribution},
+ journal = {SIGPLAN Notices},
+ issue_date = {September 2007},
+ volume = {42},
+ number = {9},
+ month = oct,
+ year = {2007},
+ issn = {0362-1340},
+ pages = {213--218},
+ numpages = {6},
+ OPTurl = {http://doi.acm.org/10.1145/1291220.1291184},
+ doi = {10.1145/1291220.1291184},
+ acmid = {1291184},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+} 
+
+@article{Jones:2008:ERP:1411203.1411219,
+ author = {Jones, Mark P.},
+ title = {Experience report: playing the DSL card},
+ journal = {SIGPLAN Notices},
+ issue_date = {September 2008},
+ volume = {43},
+ number = {9},
+ month = sep,
+ year = {2008},
+ issn = {0362-1340},
+ pages = {87--90},
+ numpages = {4},
+ OPTurl = {http://doi.acm.org/10.1145/1411203.1411219},
+ doi = {10.1145/1411203.1411219},
+ acmid = {1411219},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {Haskell, Timber, component configuration, domain-specific languages, functional programming},
+} 
+
+@article{Abadi:1991:DTS:103135.103138,
+ author = {Abadi, Mart\'{\i}n and Cardelli, Luca and Pierce, Benjamin and Plotkin, Gordon},
+ title = {Dynamic typing in a statically typed language},
+ fulljournal = {{ACM} Transactions on Programming Languages and Systems {(TOPLAS)}},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {April 1991},
+ volume = {13},
+ number = {2},
+ month = apr,
+ year = {1991},
+ issn = {0164-0925},
+ pages = {237--268},
+ numpages = {32},
+ OPTurl = {http://doi.acm.org/10.1145/103135.103138},
+ doi = {10.1145/103135.103138},
+ acmid = {103138},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {theory},
+} 
