--- a/soosim.tex
+++ b/soosim.tex
@@ -320,13 +320,13 @@ breaklines=true,basicstyle=\sffamily];#1;}
 
 \authorinfo{Oleg Lobachev}
            {Scuola Superiore Sant'Anna\\Pisa, Italy}
-           {o.lobachev@sssup.it}
+           {\href{mailto:o.lobachev@sssup.it}{o.lobachev@sssup.it}}
 \authorinfo{Christiaan Baaij\and Jan Kuper}
            {University of Twente\\Twente, Netherlands}
-           {\{c.p.r.baaij,j.kuper\}@utwente.nl}
-\authorinfo{Giuseppe Lipari}
+           {\{\href{mailto:c.p.r.baaij@utwente.nl}{c.p.r.baaij}, \href{mailto:j.kuper@utwente.nl}{j.kuper}\}@utwente.nl}
+\authorinfo{Juri Lelli\and Giuseppe Lipari}
            {Scuola Superiore Sant'Anna\\Pisa, Italy}
-           {g.lipari@sssup.it}
+           {\{\href{mailto:j.lelli@sssup.it}{j.lelli}, \href{mailto:g.lipari@sssup.it}{g.lipari}\}@sssup.it}
 
 
 \maketitle
