--- a/soosim.tex
+++ b/soosim.tex
@@ -315,7 +315,7 @@ breaklines=true,basicstyle=\sffamily];#1;}
 %\titlebanner{banner above paper title}        % These are ignored unless
 \preprintfooter{\today}   % 'preprint' option specified.
 
-\title{Experience report: \soosim, an OS similator in Haskell}
+\title{Experience report: \soosim, an OS simulator in Haskell}
 %\subtitle{Subtitle Text, if any}
 
 \authorinfo{Oleg Lobachev}
