--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -449,3 +449,22 @@
  OPTaddress = {New York, NY, USA},
  keywords = {theory},
 } 
+
+@article{Whitaker:2002:SPD:844128.844147,
+ author = {Whitaker, Andrew and Shaw, Marianne and Gribble, Steven D.},
+ title = {Scale and performance in the {Denali} isolation kernel},
+ journal = {SIGOPS Oper. Syst. Rev.},
+ issue_date = {Winter 2002},
+ volume = {36},
+ number = {SI},
+ month = dec,
+ year = {2002},
+ issn = {0163-5980},
+ pages = {195--209},
+ numpages = {15},
+ OPTurl = {http://doi.acm.org/10.1145/844128.844147},
+ doi = {10.1145/844128.844147},
+ acmid = {844147},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+} 
