--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -468,3 +468,41 @@
  publisher = {ACM},
  OPTaddress = {New York, NY, USA},
 } 
+
+@article{Temam:1994:CIP:183019.183047,
+ author = {Temam, O. and Fricker, C. and Jalby, W.},
+ title = {Cache interference phenomena},
+ journal = {{SIGMETRICS} Perform. Eval. Rev.},
+ issue_date = {May 1994},
+ volume = {22},
+ number = {1},
+ month = may,
+ year = {1994},
+ issn = {0163-5999},
+ pages = {261--271},
+ numpages = {11},
+ OPTurl = {http://doi.acm.org/10.1145/183019.183047},
+ doi = {10.1145/183019.183047},
+ acmid = {183047},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {cache interferences or conflicts, data locality, modeling, numerical codes, performance evaluation},
+} 
+
+@inproceedings{Rafique:2006:ASO:1152154.1152160,
+ author = {Rafique, Nauman and Lim, Won-Taek and Thottethodi, Mithuna},
+ title = {Architectural support for operating system-driven CMP cache management},
+ booktitle = {Proceedings of the 15\xth international conference on Parallel architectures and compilation techniques},
+ series = {PACT '06},
+ year = {2006},
+ isbn = {1-59593-264-X},
+ OPTlocation = {Seattle, Washington, USA},
+ pages = {2--12},
+ numpages = {11},
+ OPTurl = {http://doi.acm.org/10.1145/1152154.1152160},
+ doi = {10.1145/1152154.1152160},
+ acmid = {1152160},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {CMP, OS, QoS, SLAs, cache, fairness, interface, quotas},
+} 
