minor: conference info

--- a/soosim.tex
+++ b/soosim.tex
@@ -308,7 +308,7 @@ breaklines=true,basicstyle=\sffamily];#1;}
 
 \begin{document}
 
-\conferenceinfo{Haskell '12}{date, City.}
+\conferenceinfo{Haskell '12}{13\xth September, 2012, Copenhagen, Denmark.}
 \copyrightyear{2012}
 \copyrightdata{[to be supplied]}
 
